# PyRTKAI

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  bandit-tests.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: environment-variables.md  mcp-thin-surface.md  operations.md  product-roadmap.md  recipes.md  workflows-and-positioning.md
integrations/cursor-plugin/: PRE_PUBLISH_CHECKLIST.ru.md  README.md
integrations/cursor-plugin/.cursor-plugin/: plugin.json  plugin.repository.fragment.json
integrations/cursor-plugin/hooks/: hooks.json
integrations/cursor-plugin/scripts/: .pyrtkai-rewrite.sh.sha256  pyrtkai-rewrite.sh
src/pyrtkai/: cli.py  cli_bench.py  cli_config.py  cli_doctor.py  cli_gain.py  cli_hook.py  cli_init.py  cli_proxy.py  cli_rewrite.py  cli_status.py  cli_utils.py  cli_verify_hook.py  contracts.py  cursor_hooks_discover.py  hook.py  integrity.py  output_filter.py  policy.py  registry.py  release_guard.py  rewrite_hints.py  rewriter.py  schema_meta.py  shell_parse.py  tracking.py
tests/: __init__.py  filter_fixture_harness.py  harness.py  test_bench_cli.py  test_cli_dispatch.py  test_cursor_hooks_discover.py  test_cursor_plugin_packaging.py  test_doctor_cli.py  test_filter_fixture_harness_smoke.py  test_hook_policy_gate.py  test_init_cli.py  test_integrity.py  test_integrity_cli.py  test_json_contracts.py  test_output_filter_contract.py  test_output_filter_engine.py  test_output_filter_fixtures.py  test_output_format_detection.py  test_performance_slo.py  test_phase1_proxy.py  test_phase2_shell_parse_invariants.py  test_policy.py  test_proxy_contracts.py  test_redirect_fd_merge_rewrite.py  test_release_guard.py  test_rewrite_soft_magic.py  test_schema_meta.py  test_shell_parse_env_prefix_bounded.py  test_shell_parse_hardening.py  test_shell_parse_properties.py  test_smoke.py  test_status_cli.py  test_tracking.py
tests/e2e/: __init__.py  test_cross_platform_e2e.py
tests/fixtures/: output_filter_cases.json
