[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrtkai"
description = "Safe-by-default CLI layer for AI agents — less noise, less risk: no-shell proxy, fail-closed policy, deterministic output filtering, local gain (Cursor-friendly)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
keywords = [
  "cli",
  "proxy",
  "cursor",
  "agent",
  "ai",
  "token",
  "shell",
  "rewrite",
  "hooks",
  "subprocess",
  "filtering",
  "policy",
  "safety",
  "security",
  "context",
]
authors = [{ name = "PyRTKAI" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/irmedvedeva/PyRTKAI"
Documentation = "https://github.com/irmedvedeva/PyRTKAI/tree/master/docs"
Repository = "https://github.com/irmedvedeva/PyRTKAI"
"Environment variables" = "https://github.com/irmedvedeva/PyRTKAI/blob/master/docs/environment-variables.md"
Changelog = "https://github.com/irmedvedeva/PyRTKAI/releases"
Issues = "https://github.com/irmedvedeva/PyRTKAI/issues"
Security = "https://github.com/irmedvedeva/PyRTKAI/blob/master/SECURITY.md"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "mypy>=1.8",
  "pip-audit>=2.6",
  "bandit>=1.7",
]

[project.scripts]
pyrtkai = "pyrtkai.cli:main"

[tool.setuptools.dynamic]
version = { attr = "pyrtkai.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyrtkai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: cross-platform end-to-end flows (subprocess; run in OS matrix CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
